--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat gpt</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="main-container">
-        <div class="rectangle"><span class="logo">лого</span></div>
-        <div class="flex-row-a">
-            <div class="rectangle-1"></div>
-            <div class="rectangle-2">
-                <span class="python-script">python script</span>
+    <div class="container">
+        <div class="image-section">
+            <img class="img" src="d:\How-to-get-the-very-best-results-and-usage-out-of-GPT-4-by-OpenAI-.png" alt="Registration Image">
+        </div>
+        <div class="form-section">
+            <div class="form-container">
+                <h2>Register</h2>
+                <form id="registrationForm">
+                    <input type="text" id="username" name="username" placeholder="Username" required>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+                    <button type="button" onclick="validateForm()">Register</button>
+                </form>
             </div>
-            <button class="button">
-                <span class="create-workout-plan">Create a workout plan</span>
-            </button>
-            <div class="rectangle-3">
-                <span class="write-text">Write a text</span>
-            </div>
-            <button class="rectangle-4">
-                <span class="fun-fact">Tell me a fun fact</span></button><button class="rectangle-5"></button><span
-                class="enter-something">Введіть щось</span>
         </div>
     </div>
-</body>
+    <div class="footer-container">
+        <p class="text-docl">Всі дані не будуть вкрадені якщо ви не впевнені можете прочитати це <span class="span-docl" id="doc-link">Докладніше</span></p>
+    </div>
+    <script src="script.js"></script>
 
+</body>
 </html>
