--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,6 @@
     <form onsubmit="sendMessage(event)">
         <input type="text" class="input" placeholder="Введіть текст">
     </form>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
