--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +13,7 @@
     </div>
 
     <form onsubmit="sendMessage(event)">
-        <input type="text" class="input" placeholder="Введіть текст">
+        <input type="text" class="input" id="userInput" placeholder="Введіть текст">
     </form>
     <script src="script2.js"></script>
 </body>
