--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chat GPT</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam omnis ullam deserunt repudiandae sint cumque nesciunt maiores illum iusto neque. At, autem accusamus? Excepturi ipsum, blanditiis accusamus repellat totam a!</p>
+    <p>Штучний інтелект у виді чату якому можна задавати питання</p>
     <div id="messages">
         
     </div>
